src/styles/index.css
* {
  -webkit-font-smoothing: antialiased;
  -moz-box-sizing: border-box;
  box-sizing: border-box;

  --container-width: 1240px;
  --container-height: 650px;
  --pane-width: 500px;
  --gutter-width: 24px;
  --shadow-width: 4px;
  --left-offset: calc(2 * var(--gutter-width) + var(--pane-width));

  --background-color: #eee;
  --text-color: #222;
  --font-size: 1em;
  --icon-size: calc(var(--gutter-width) * 2);

  @media (max-width: 1140px) {
    --gutter-width: 12px;
    --font-size: 0.8em;
    --pane-width: 400px;
  }

  @media (max-width: 800px) {
    --left-offset: calc(50% + var(--gutter-width) * 2);
    --pane-width: 100%;
  }
}

@font-face {
  font-family: 'Roboto Condensed';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: url(../fonts/lego.woff2) format('woff2');
}

@font-face {
  font-family: 'Space Mono';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(../fonts/space.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

body {
  margin: 0;
  font-size: var(--font-size);
  background: var(--background-color);
}

#side-pane {
  background: var(--background-color);
  color: var(--text-color);
  height: 100vh;
  width: calc(var(--pane-width));
  padding: var(--gutter-width);
  font-family: 'Space Mono', monospace;
  overflow: scroll;
}

#hi {
  background-color: var(--color-1);
}

#contact {
  background-color: var(--color-2);
}

.box {
  width: fit-content;
  padding: 0 calc(var(--shadow-width) * 2);
  box-shadow: var(--shadow-width) var(--shadow-width) 0 #000;
  color: #fff;
}

#me {
  object-fit: cover;
  aspect-ratio: 1;
  margin: calc(3 * var(--shadow-width)/2);
  max-width: min(50vw, 350px);
  width: 50%;
  box-shadow:
    calc(-1 * var(--shadow-width)) calc(-1 * var(--shadow-width)) 0 calc(var(--shadow-width)/2) var(--color-3),
    var(--shadow-width) var(--shadow-width) 0 calc(var(--shadow-width)/2) var(--color-4);
}

a {
  color: var(--text-color);
  text-decoration: underline;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

#collection {
  position: absolute;
  left: var(--left-offset);
  top: calc(2 * var(--gutter-width));
}

.links {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  z-index: 10;
}

.links div {
  align-items: center;
  justify-content: center;
  display: flex;
  padding: 1em 0;
}

.links img {
  height: var(--icon-size);
}

.links a {
  width: fit-content;
}

.links a img {
  filter: invert(20%);
}

.brick {
  position: relative;
}

.side, .unit {
  position: absolute;
}

.side--1 {
  transform: skewY(-30deg);
  background: var(--brick-color);
  filter: brightness(0.7);
}

.side--2 {
  background: var(--brick-color);
  transform: skewY(30deg);
  filter: brightness(0.8);
}

.side--3 {
  transform: skewY(30deg);
  background: var(--brick-color);
  filter: brightness(0.9);
}

.side--3-wrap {
  transform: rotate(-60deg);
}

.unit {
  height: 106.5px;
  width: 80px;
  transform: translateY(-40px);
  opacity: 0;
  animation: 200ms 1 forwards entering;
  animation-delay: var(--enter-delay);
}

.side--1 {
  top: 34px;
  right: 0px;
  height: 61px;
  width: 40.5px;
}

.side--2 {
  top: 34px;
  left: 0px;
  height: 61px;
  width: 40.5px;
}

.side--3 {
  top: -12px;
  left: 0px;
  height: 46.5px;
  width: 40px;
}

.stud:not(before) {
  background: var(--brick-color);
  filter: brightness(0.8);
  border-radius: 18px / 10px;
  height: 26.5px;
  left: 24px;
  top: 3px;
  width: 32px;
  position: absolute;
  box-shadow: inset -4px 6px 8px rgba(0, 0, 0, 0.3), inset 0px 6px 20px rgba(0, 0, 0, 0.2);
  z-index: 10;

  &:before {
    background: var(--brick-color);
    filter: brightness(1.1) saturate(0.9) contrast(1.1);
    content: "";
    position: absolute;
    height: 18px;
    width: 32px;
    border-radius: 18px / 10px;
    z-index: 10;
  }
}

.stud--inner {
  position: absolute;
  transform: rotate(60deg);
  z-index: 100;

  &:after {
    font-family: 'Roboto Condensed', sans-serif;
    color: var(--brick-color);
    filter: brightness(0.8);
    content: 'LEGO';
    text-shadow: 0.5px 0.5px 0px rgba(0, 0, 0, 0.2);
    font-weight: 400;
    font-size: 9px;
    position: absolute;
    left: 6.5px;
    top: -14px;
    transform: skewY(-30deg);
  }
}

@keyframes entering {
  from {
    transform: translateY(-40px);
    opacity: 0;
  }

  to {
    transform: translateY(0px);
    opacity: 1;
  }
}

@media (prefers-color-scheme: dark) {
  .side--1 {
    filter: brightness(0.6) saturate(0.9);
  }

  .side--2 {
    filter: brightness(0.7) saturate(0.9);
  }

  .side--3 {
    filter: brightness(0.8) saturate(0.9);
  }

  .stud:not(before) {
    filter: brightness(0.8) saturate(0.9);

    &:before {
      filter: brightness(1.1) saturate(0.9);
    }
  }

  #hi {
    filter: brightness(0.9) saturate(0.9);
  }

  #contact {
    filter: brightness(0.9) saturate(0.9);
  }

  #me {
    filter: brightness(0.9) saturate(0.9);
  }

  * {
    --background-color: rgb(42, 42, 42);
    --text-color: #eee;
  }

  #side-pane .links img {
    filter: invert(90%);
  }
}

